--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@koa/multer": "^2.0.2",
     "bcrypt-nodejs": "0.0.3",
-    "datalize": "^0.3.4",
     "koa": "^2.11.0",
-    "koa-async-validator": "^0.4.1",
     "koa-convert": "latest",
-    "koa-csrf": "^3.0.8",
     "koa-flash-simple": "0.0.3",
+    "koa-mongoose": "^2.0.0",
     "koa-multer": "^1.0.2",
     "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
+    "koa-session-minimal": "^3.0.4",
     "koa-session-mongoose": "^3.0.1",
+    "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
@@ -30,9 +30,6 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "koa-body": "^4.1.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-generic-session": "^2.0.4",
     "koa-morgan": "^1.0.1",
     "koa-pug": "^4.0.3"
   }
